rust/kcl-lib/tests/bad_units_in_annotation/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing bad_units_in_annotation.kcl
---
KCL Semantic error

  × semantic: Unexpected value for length units: `nm`; expected one of `mm`,
  │ `cm`, `m`, `in`, `ft`, `yd`
   ╭─[2:19]
 1 │ @settings(defaultLengthUnit = nm)
 2 │ // Generated by Text-to-CAD: draw a water molecule
   ·                   ────────────────┬────────────────
   ·                                   ╰── tests/bad_units_in_annotation/input.kcl
 3 │ 
 4 │ 
   ╰────
